[gd_scene load_steps=3 format=3 uid="uid://cywxfe684f010"]

[ext_resource type="Script" path="res://Scenes/UI/Inventory/GlobalInventory.gd" id="1_hdf6w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ca6a"]
size = Vector2(350, 350)

[node name="GlobalInventory" type="Control" groups=["inventory"]]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1_hdf6w")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_right = 350.0
offset_bottom = 350.0
horizontal_scroll_mode = 0

[node name="ItemGrid" type="GridContainer" parent="ScrollContainer"]
layout_mode = 2
columns = 5

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(175, 175)
shape = SubResource("RectangleShape2D_4ca6a")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
